Add a companion flag `BUILD_DOCS_ONLY_WITH_PACKAGE`

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -254,6 +254,8 @@ if( BUILD_PACKAGE )
 endif()
 
 if (BUILD_DOCS)
+  option(BUILD_DOCS_ONLY_WITH_PACKAGE "Build DOCS only explicitly via `make docs` or when `make package`" OFF)
+  # mark_as_advanced(BUILD_DOCS_ONLY_WITH_PACKAGE)
   add_subdirectory(doc)
 endif()
 
