--- a/src/EnergyPlus/CMakeLists.txt
+++ b/src/EnergyPlus/CMakeLists.txt
@@ -83,6 +83,8 @@ SET( SRC
   DXCoils.hh
   DXFEarClipping.cc
   DXFEarClipping.hh
+  Data/BaseboardData.hh
+  Data/BaseData.hh
   Data/EnergyPlusData.hh
   DataAirLoop.cc
   DataAirLoop.hh
@@ -744,7 +746,7 @@ SET( API_CORE_SRC
   api/runtime.cc
   api/datatransfer.cc
   api/EnergyPlusPgm.cc
-)
+        Data/BaseboardData.hh Data/BaseData.hh)
 
 if(APPLE OR UNIX)
   add_library( energyplusapi SHARED CommandLineInterface.hh CommandLineInterface.cc ${API_CORE_SRC} ${API_HEADERS})
