--- a/src/EnergyPlus/CMakeLists.txt
+++ b/src/EnergyPlus/CMakeLists.txt
@@ -745,8 +745,7 @@ SET( API_CORE_SRC
   api/func.cc
   api/runtime.cc
   api/datatransfer.cc
-  api/EnergyPlusPgm.cc
-        Data/BaseboardData.hh Data/BaseData.hh)
+  api/EnergyPlusPgm.cc)
 
 if(APPLE OR UNIX)
   add_library( energyplusapi SHARED CommandLineInterface.hh CommandLineInterface.cc ${API_CORE_SRC} ${API_HEADERS})
