Fix file name & update Cmake list

--- a/tst/EnergyPlus/unit/CMakeLists.txt
+++ b/tst/EnergyPlus/unit/CMakeLists.txt
@@ -21,6 +21,7 @@ set( test_src
   BoilerSteam.unit.cc
   BranchInputManager.unit.cc
   BranchNodeConnections.unit.cc
+  CTElectricGenerator.unit.cc
   ChilledCeilingPanelSimple.unit.cc
   ChillerAbsorption.unit.cc
   ChillerConstantCOP.unit.cc
@@ -101,6 +102,7 @@ set( test_src
   HVACVariableRefrigerantFlow.unit.cc
   HWBaseboardRadiator.unit.cc
   HybridModel.unit.cc
+  ICEngineElectricGenerator.unit.cc
   IceThermalStorage.unit.cc
   ICSCollector.unit.cc
   IdfParser.unit.cc
@@ -111,6 +113,7 @@ set( test_src
   KusudaAchenbachGroundTemperatureModel.unit.cc
   LowTempRadiantSystem.unit.cc
   MicroCHPElectricGenerator.unit.cc
+  MicroturbineElectricGenerator.unit.cc
   MoistureBalanceEMPD.unit.cc
   MixedAir.unit.cc
   MixerComponent.unit.cc
