Add Multi-choice option instead of two booleans + backward compat
Temporary workaround to default the correct DOCUMENTATION_BUILD value if BUILD_DOCS existed in the cache or is passed via the command line

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,50 @@ endif()
 option( BUILD_PACKAGE "Build package" OFF )
 option( BUILD_TESTING "Build testing targets" OFF )
 option( BUILD_FORTRAN "Build Fortran stuff" OFF )
-option( BUILD_DOCS "Build LaTeX-pdf documentation" OFF )
+
+#######################################################################
+
+# TODO: remove at next release
+# Temporary workaround to default the correct DOCUMENTATION_BUILD value if BUILD_DOCS existed in the cache or is passed via the command line
+# This warning will be triggered only once if it's from the Cache since I'm unsetting it
+# (such as when using the GUI or running `cmake .` instead of passing all command line arguments)
+if(DEFINED BUILD_DOCS)
+  if (NOT DEFINED DOCUMENTATION_BUILD)
+    if(BUILD_DOCS)
+      message(AUTHOR_WARNING "BUILD_DOCS (=ON) was deprecated in favor of the 'DOCUMENTATION_BUILD' choice, which was defaulted to 'BuildWithAll'")
+      set(DOCUMENTATION_BUILD "BuildWithAll" CACHE STRING "Build LaTeX-pdf documentation")
+    else()
+      message(AUTHOR_WARNING "BUILD_DOCS (=OFF) was deprecated in favor of the 'DOCUMENTATION_BUILD' choice, which was defaulted to 'DoNotBuild")
+    endif()
+  else()
+    message(AUTHOR_WARNING "DOCUMENTATION_BUILD is already defined and has value '${DOCUMENTATION_BUILD}', ignoring BUILD_DOCS")
+  endif()
+  unset(BUILD_DOCS CACHE)
+endif()
+# END TODO
+
+set(DocumentationBuildValues "DoNotBuild;BuildWithAll;BuildOnlyWithPackage" CACHE INTERNAL
+  "List of possible values for the LaTeX-pdf documentation")
+set(DOCUMENTATION_BUILD "DoNotBuild" CACHE STRING "Build LaTeX-pdf documentation")
+set_property(CACHE DOCUMENTATION_BUILD PROPERTY STRINGS ${DocumentationBuildValues})
+
+if(NOT DOCUMENTATION_BUILD IN_LIST DocumentationBuildValues)
+  message(FATAL_ERROR "DOCUMENTATION_BUILD must be one of ${DocumentationBuildValues}")
+endif()
+
+# Local only variables for ease of use in if blocks
+set(BUILD_DOCS OFF)
+set(BUILD_DOCS_ONLY_WITH_PACKAGE OFF)
+
+if(DOCUMENTATION_BUILD STREQUAL "BuildWithAll")
+  set(BUILD_DOCS ON)
+  set(BUILD_DOCS_ONLY_WITH_PACKAGE OFF)
+elseif(DOCUMENTATION_BUILD STREQUAL "BuildOnlyWithPackage")
+  set(BUILD_DOCS ON)
+  set(BUILD_DOCS_ONLY_WITH_PACKAGE ON)
+endif()
+#######################################################################
+
 option( LINK_WITH_PYTHON "Link with Python Library for Python Plugin Builds" OFF )
 
 # Turning ENABLE_GTEST_DEBUG_MODE ON will cause assertions and exceptions to halt the test case and unwind.
@@ -254,8 +297,6 @@ if( BUILD_PACKAGE )
 endif()
 
 if (BUILD_DOCS)
-  option(BUILD_DOCS_ONLY_WITH_PACKAGE "Build DOCS only explicitly via `make docs` or when `make package`" OFF)
-  mark_as_advanced(BUILD_DOCS_ONLY_WITH_PACKAGE)
   add_subdirectory(doc)
 endif()
 
