--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -2,6 +2,7 @@ project(EnergyPlusDocs LANGUAGES NONE)
 
 cmake_minimum_required(VERSION 3.5.1)
 
+option( DOCS_TESTING "Test the docs for issues" OFF )
 # this _should_ find the xelatex compiler, but for some reason it isn't populating for me
 find_package(LATEX)
 # so we'll create a cache variable which will be available to the add_subdirectory call below
@@ -12,7 +13,7 @@ string(REPLACE pdflatex xelatex XELATEX ${PDFLATEX_COMPILER})
 set(TEX_INTERACTION "batchmode" CACHE STRING "Choose the interaction mode for TeX.")
 set_property(CACHE TEX_INTERACTION PROPERTY STRINGS "nonstopmode" "batchmode")
 if( EXISTS ${XELATEX} )
-# and if it does, just add the doc/CMakeLists commands
+  # and if it does, just add the doc/CMakeLists commands
   # let's create a folder to drop ONLY PDFs in once they are built, this will allow easy upload to s3
   file(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/pdf)
   file(COPY ${PROJECT_SOURCE_DIR}/index.html DESTINATION ${PROJECT_BINARY_DIR}/pdf)
@@ -23,6 +24,10 @@ if( EXISTS ${XELATEX} )
 
   # Add custom target to build only documentation
   add_custom_target(docs ALL)
+
+  if (DOCS_TESTING)
+    enable_testing()
+  endif()
 
   include(cmake/doc-targets.cmake)
 
