Fix organizaiton on non-Windows machines.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -263,39 +263,29 @@ if( BUILD_TESTING )
 
   set_target_properties(btwxt_tests PROPERTIES FOLDER ThirdParty/Btwxt)
   set_target_properties(kiva_tests PROPERTIES FOLDER ThirdParty/Kiva)
-  set_target_properties(penumbra_tests PROPERTIES FOLDER ThirdParty/Penumbra)
- 
+  if( OPENGL_FOUND )
+    set_target_properties(penumbra_tests PROPERTIES FOLDER ThirdParty/Penumbra)
+  endif()
 endif()
 
 ADD_SUBDIRECTORY(src/ConvertInputFormat)
-set_target_properties(ConvertInputFormat PROPERTIES FOLDER Auxiliary)
 
 if( BUILD_FORTRAN )
   include(CMakeAddFortranSubdirectory)
   cmake_add_fortran_subdirectory(src/ExpandObjects PROJECT ExpandObjects NO_EXTERNAL_INSTALL )
-  set_target_properties(ExpandObjects_build PROPERTIES FOLDER Auxiliary)
   cmake_add_fortran_subdirectory(src/ReadVars PROJECT ReadVars NO_EXTERNAL_INSTALL )
-  set_target_properties(ReadVars_build PROPERTIES FOLDER Auxiliary)
   set(TRANSITION_EXTRA_FLAGS "-DCMAKE_VERSION_MAJOR:STRING=${CMAKE_VERSION_MAJOR}" "-DCMAKE_VERSION_MINOR:STRING=${CMAKE_VERSION_MINOR}" "-DCMAKE_VERSION_PATCH:STRING=${CMAKE_VERSION_PATCH}")
   cmake_add_fortran_subdirectory(src/Transition PROJECT Transition CMAKE_COMMAND_LINE ${TRANSITION_EXTRA_FLAGS} NO_EXTERNAL_INSTALL )
   file( COPY "idd/V9-2-0-Energy+.idd" DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}" )
   configure_file( idd/Energy+.idd.in "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/V9-3-0-Energy+.idd" )
   file( COPY "src/Transition/SupportFiles/Report Variables 9-2-0 to 9-3-0.csv" DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}" )
-  set_target_properties(Transition_build PROPERTIES FOLDER Auxiliary)
   cmake_add_fortran_subdirectory(src/Basement PROJECT Basement NO_EXTERNAL_INSTALL )
-  set_target_properties(Basement_build PROPERTIES FOLDER Auxiliary)
   cmake_add_fortran_subdirectory(src/HVAC-Diagram PROJECT HVAC-Diagram NO_EXTERNAL_INSTALL )
-  set_target_properties(HVAC-Diagram_build PROPERTIES FOLDER Auxiliary)
   cmake_add_fortran_subdirectory(src/ParametricPreprocessor PROJECT ParametricPreprocessor NO_EXTERNAL_INSTALL )
-  set_target_properties(ParametricPreprocessor_build PROPERTIES FOLDER Auxiliary)
   cmake_add_fortran_subdirectory(src/Slab PROJECT Slab NO_EXTERNAL_INSTALL )
-  set_target_properties(Slab_build PROPERTIES FOLDER Auxiliary)
   cmake_add_fortran_subdirectory(src/ConvertESOMTR PROJECT ConvertESOMTR NO_EXTERNAL_INSTALL )
-  set_target_properties(ConvertESOMTR_build PROPERTIES FOLDER Auxiliary)
   cmake_add_fortran_subdirectory(src/CalcSoilSurfTemp PROJECT CalcSoilSurfTemp NO_EXTERNAL_INSTALL )
-  set_target_properties(CalcSoilSurfTemp_build PROPERTIES FOLDER Auxiliary)
   cmake_add_fortran_subdirectory(src/AppGPostProcess PROJECT AppGPostProcess NO_EXTERNAL_INSTALL )
-  set_target_properties(AppGPostProcess_build PROPERTIES FOLDER Auxiliary)
 endif()
 
 if( BUILD_PACKAGE )
