fixing cmake policy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -246,9 +246,9 @@ ENDIF()
 ADD_SUBDIRECTORY(third_party/Windows-CalcEngine)
 set_target_properties(Windows-CalcEngine PROPERTIES FOLDER ThirdParty/Windows-CalcEngine)
 
-set(skip_tools 1)
-set(skip_tests 1)
-set(skip_api 1)
+set(skip_tools ON)
+set(skip_tests ON)
+set(skip_api ON)
 ADD_SUBDIRECTORY(third_party/ssc)
 unset(skip_api)
 unset(skip_tools)
