--- a/.github/workflows/windows_release.yml
+++ b/.github/workflows/windows_release.yml
@@ -35,7 +35,7 @@ jobs:
 
     - name: Build Test Document (will install missing packages)
       working-directory: ${{runner.workspace}}/EnergyPlus/doc/test
-      run: "/C/Program Files/MikTeX/miktex/bin/x64/xelatex.exe" dependencies.tex
+      run: /C/Program\ Files/MikTeX/miktex/bin/x64/xelatex.exe dependencies.tex
 
     - name: Install IFW
       run: aqt tool windows tools_ifw 3.2.2 qt.tools.ifw.32 --outputdir=${{runner.workspace}}/Qt
@@ -101,7 +101,7 @@ jobs:
 
     - name: Build Test Document (will install missing packages)
       working-directory: ${{runner.workspace}}/EnergyPlus/doc/test
-      run: "/C/Program Files/MikTeX/miktex/bin/x64/xelatex.exe" dependencies.tex
+      run: /C/Program\ Files/MikTeX/miktex/bin/x64/xelatex.exe dependencies.tex
 
     - name: Install IFW
       run: aqt tool windows tools_ifw 3.2.2 qt.tools.ifw.32 --outputdir=${{runner.workspace}}/Qt
