--- a/.github/workflows/windows_release.yml
+++ b/.github/workflows/windows_release.yml
@@ -36,6 +36,7 @@ jobs:
     - name: Build Test Document (will install missing packages)
       working-directory: ${{runner.workspace}}/EnergyPlus/doc/test
       run: /C/Program\ Files/MikTeX/miktex/bin/x64/xelatex.exe dependencies.tex
+      shell: bash
 
     - name: Install IFW
       run: aqt tool windows tools_ifw 3.2.2 qt.tools.ifw.32 --outputdir=${{runner.workspace}}/Qt
@@ -102,6 +103,7 @@ jobs:
     - name: Build Test Document (will install missing packages)
       working-directory: ${{runner.workspace}}/EnergyPlus/doc/test
       run: /C/Program\ Files/MikTeX/miktex/bin/x64/xelatex.exe dependencies.tex
+      shell: bash
 
     - name: Install IFW
       run: aqt tool windows tools_ifw 3.2.2 qt.tools.ifw.32 --outputdir=${{runner.workspace}}/Qt
