--- a/.github/workflows/windows_release.yml
+++ b/.github/workflows/windows_release.yml
@@ -30,8 +30,8 @@ jobs:
     - name: Install Chocolately Packages
       run: choco install miktex && refreshenv
 
-    - name: Add MikTeX binary folder to path
-      run: echo "/C/Program Files/MikTeX/miktex/bin/x64" >> $GITHUB_PATH
+#    - name: Add MikTeX binary folder to path
+#      run: echo "/C/Program Files/MikTeX/miktex/bin/x64" >> $GITHUB_PATH
 
     - name: Build Test Document (will install missing packages)
       working-directory: ${{runner.workspace}}/EnergyPlus/doc/test
@@ -41,8 +41,8 @@ jobs:
     - name: Install IFW
       run: aqt tool windows tools_ifw 3.2.2 qt.tools.ifw.32 --outputdir=${{runner.workspace}}/Qt
 
-    - name: Add IFW to PATH
-      run: echo "${{runner.workspace}}/Qt/Tools/QtInstallerFramework/3.2/bin" >> $GITHUB_PATH
+#    - name: Add IFW to PATH
+#      run: echo "${{runner.workspace}}/Qt/Tools/QtInstallerFramework/3.2/bin" >> $GITHUB_PATH
 
     - name: Create Build Directory
       run: cmake -E make_directory ${{runner.workspace}}/EnergyPlus/build
@@ -50,7 +50,7 @@ jobs:
     - name: Configure CMake
       shell: bash
       working-directory: ${{runner.workspace}}/EnergyPlus/build
-      run: cmake -G "Visual Studio 16 2019" -A x64 -DLINK_WITH_PYTHON=ON -DTEX_INTERACTION="batchmode" -DBUILD_FORTRAN=ON -DDOCUMENTATION_BUILD="BuildWithAll" -DMIKTEX_BINARY_PATH="C:/Program Files/MikTeX/miktex/bin/x64" -DBUILD_PACKAGE:BOOL=ON ..
+      run: cmake -G "Visual Studio 16 2019" -A x64 -DLINK_WITH_PYTHON=ON -DTEX_INTERACTION="batchmode" -DBUILD_FORTRAN=ON -DDOCUMENTATION_BUILD="BuildWithAll" -DMIKTEX_BINARY_PATH="C:/Program Files/MikTeX/miktex/bin/x64" -DQTIFWDIR="${{runner.workspace}}/Qt/Tools/QtInstallerFramework/3.2" -DBUILD_PACKAGE:BOOL=ON ..
 
     - name: Build Package
       working-directory: ${{runner.workspace}}/EnergyPlus/build
@@ -96,9 +96,9 @@ jobs:
 
     - name: Install Chocolately Packages
       run: choco install miktex && refreshenv
-
-    - name: Add MikTeX binary folder to path
-      run: echo "/C/Program Files/MikTeX/miktex/bin/x64" >> $GITHUB_PATH
+#
+#    - name: Add MikTeX binary folder to path
+#      run: echo "/C/Program Files/MikTeX/miktex/bin/x64" >> $GITHUB_PATH
 
     - name: Build Test Document (will install missing packages)
       working-directory: ${{runner.workspace}}/EnergyPlus/doc/test
@@ -107,9 +107,9 @@ jobs:
 
     - name: Install IFW
       run: aqt tool windows tools_ifw 3.2.2 qt.tools.ifw.32 --outputdir=${{runner.workspace}}/Qt
-
-    - name: Add IFW to PATH
-      run: echo "${{runner.workspace}}/Qt/Tools/QtInstallerFramework/3.2/bin" >> $GITHUB_PATH
+#
+#    - name: Add IFW to PATH
+#      run: echo "${{runner.workspace}}/Qt/Tools/QtInstallerFramework/3.2/bin" >> $GITHUB_PATH
 
     - name: Create Build Directory
       run: cmake -E make_directory ${{runner.workspace}}/EnergyPlus/build
@@ -117,7 +117,7 @@ jobs:
     - name: Configure CMake
       shell: bash
       working-directory: ${{runner.workspace}}/EnergyPlus/build
-      run: cmake -G "Visual Studio 16 2019" -A Win32 -DLINK_WITH_PYTHON=ON -DTEX_INTERACTION="batchmode" -DBUILD_FORTRAN=ON -DDOCUMENTATION_BUILD="BuildWithAll" -DMIKTEX_BINARY_PATH="C:/Program Files/MikTeX/miktex/bin/x64" -DBUILD_PACKAGE:BOOL=ON ..
+      run: cmake -G "Visual Studio 16 2019" -A Win32 -DLINK_WITH_PYTHON=ON -DTEX_INTERACTION="batchmode" -DBUILD_FORTRAN=ON -DDOCUMENTATION_BUILD="BuildWithAll" -DMIKTEX_BINARY_PATH="C:/Program Files/MikTeX/miktex/bin/x64" -DQTIFWDIR="${{runner.workspace}}/Qt/Tools/QtInstallerFramework/3.2" -DBUILD_PACKAGE:BOOL=ON ..
 
     - name: Build Package
       working-directory: ${{runner.workspace}}/EnergyPlus/build
