OK, docs are building fine, but it cant find IFW.  Something up with this new PATH approach on GH actions.

--- a/.github/workflows/windows_release.yml
+++ b/.github/workflows/windows_release.yml
@@ -30,9 +30,6 @@ jobs:
     - name: Install Chocolately Packages
       run: choco install miktex && refreshenv
 
-#    - name: Add MikTeX binary folder to path
-#      run: echo "/C/Program Files/MikTeX/miktex/bin/x64" >> $GITHUB_PATH
-
     - name: Build Test Document (will install missing packages)
       working-directory: ${{runner.workspace}}/EnergyPlus/doc/test
       run: /C/Program\ Files/MikTeX/miktex/bin/x64/xelatex.exe dependencies.tex
@@ -41,8 +38,8 @@ jobs:
     - name: Install IFW
       run: aqt tool windows tools_ifw 3.2.2 qt.tools.ifw.32 --outputdir=${{runner.workspace}}/Qt
 
-#    - name: Add IFW to PATH
-#      run: echo "${{runner.workspace}}/Qt/Tools/QtInstallerFramework/3.2/bin" >> $GITHUB_PATH
+    - name: Add IFW to PATH
+      run: echo "::add-path::${{runner.workspace}}/Qt/Tools/QtInstallerFramework/3.2/bin"
 
     - name: Create Build Directory
       run: cmake -E make_directory ${{runner.workspace}}/EnergyPlus/build
@@ -97,9 +94,6 @@ jobs:
     - name: Install Chocolately Packages
       run: choco install miktex && refreshenv
 #
-#    - name: Add MikTeX binary folder to path
-#      run: echo "/C/Program Files/MikTeX/miktex/bin/x64" >> $GITHUB_PATH
-
     - name: Build Test Document (will install missing packages)
       working-directory: ${{runner.workspace}}/EnergyPlus/doc/test
       run: /C/Program\ Files/MikTeX/miktex/bin/x64/xelatex.exe dependencies.tex
@@ -107,9 +101,9 @@ jobs:
 
     - name: Install IFW
       run: aqt tool windows tools_ifw 3.2.2 qt.tools.ifw.32 --outputdir=${{runner.workspace}}/Qt
-#
-#    - name: Add IFW to PATH
-#      run: echo "${{runner.workspace}}/Qt/Tools/QtInstallerFramework/3.2/bin" >> $GITHUB_PATH
+
+    - name: Add IFW to PATH
+      run: echo "::add-path::${{runner.workspace}}/Qt/Tools/QtInstallerFramework/3.2/bin"
 
     - name: Create Build Directory
       run: cmake -E make_directory ${{runner.workspace}}/EnergyPlus/build
