--- a/.github/workflows/windows_release.yml
+++ b/.github/workflows/windows_release.yml
@@ -10,17 +10,34 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
-  windows_release_64:
+  windows_release:
     runs-on: windows-2019
-    steps:
+    continue-on-error: ${{ matrix.allow_failure }}
+    strategy:
+      # fail-fast: Default is true, switch to false to allow one platform to fail and still run others
+      fail-fast: false
+      matrix:
+        arch: [x64, x86]
+        include:
+        - arch: x64
+          allow_failure: false
+          vs-generator: x64
+          package-arch: x86_64
+          asset_name: Win64
+        - arch: x86
+          allow_failure: false
+          vs-generator: Win32
+          package-arch: i386
+          asset_name: Win32
 
+    steps:
     - uses: actions/checkout@v2
 
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
-        architecture: 'x64'
+        architecture: ${{ matrix.arch }}
 
     - name: Install Python dependencies
       run: |
@@ -32,86 +49,26 @@ jobs:
 
     - name: Build Test Document (will install missing packages)
       working-directory: ${{runner.workspace}}/EnergyPlus/doc/test
-      run: /C/Program\ Files/MikTeX/miktex/bin/x64/xelatex.exe dependencies.tex
       shell: bash
+      run: /C/Program\ Files/MikTeX/miktex/bin/x64/xelatex.exe dependencies.tex
 
     - name: Install IFW
-      run: aqt tool windows tools_ifw 3.2.2 qt.tools.ifw.32 --outputdir=${{runner.workspace}}/Qt
-
-    - name: Add IFW to PATH
-      run: echo "::add-path::${{runner.workspace}}/Qt/Tools/QtInstallerFramework/3.2/bin"
-
-    - name: Create Build Directory
-      run: cmake -E make_directory ${{runner.workspace}}/EnergyPlus/build
-
-    - name: Configure CMake
       shell: bash
-      working-directory: ${{runner.workspace}}/EnergyPlus/build
-      run: cmake -G "Visual Studio 16 2019" -A x64 -DLINK_WITH_PYTHON=ON -DTEX_INTERACTION="batchmode" -DBUILD_FORTRAN=ON -DDOCUMENTATION_BUILD="BuildWithAll" -DMIKTEX_BINARY_PATH="C:/Program Files/MikTeX/miktex/bin/x64" -DQTIFWDIR="${{runner.workspace}}/Qt/Tools/QtInstallerFramework/3.2" -DBUILD_PACKAGE:BOOL=ON ..
-
-    - name: Build Package
-      working-directory: ${{runner.workspace}}/EnergyPlus/build
-      shell: bash
-      run: cmake --build . --target package -j 2 --config Release
-
-    - name: Upload Zip to release
-      uses: svenstaro/upload-release-action@v2
-      with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: ${{runner.workspace}}/EnergyPlus/build/EnergyPlus-*-Windows-x86_64.zip
-        tag: ${{ github.ref }}
-        overwrite: true
-        file_glob: true
-        asset_name: Win64_Zip
-
-    - name: Upload IFW to release
-      uses: svenstaro/upload-release-action@v2
-      with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: ${{runner.workspace}}/EnergyPlus/build/EnergyPlus-*-Windows-x86_64.exe
-        tag: ${{ github.ref }}
-        overwrite: true
-        file_glob: true
-        asset_name: Win64_Installer
-
-  windows_release_32:
-    runs-on: windows-2019
-    steps:
-
-    - uses: actions/checkout@v2
-
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
-        architecture: 'x86'
-
-    - name: Install Python dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install aqtinstall
-
-    - name: Install Chocolately Packages
-      run: choco install miktex && refreshenv
-#
-    - name: Build Test Document (will install missing packages)
-      working-directory: ${{runner.workspace}}/EnergyPlus/doc/test
-      run: /C/Program\ Files/MikTeX/miktex/bin/x64/xelatex.exe dependencies.tex
-      shell: bash
-
-    - name: Install IFW
-      run: aqt tool windows tools_ifw 3.2.2 qt.tools.ifw.32 --outputdir=${{runner.workspace}}/Qt
-
-    - name: Add IFW to PATH
-      run: echo "::add-path::${{runner.workspace}}/Qt/Tools/QtInstallerFramework/3.2/bin"
+        aqt tool windows tools_ifw 3.2.2 qt.tools.ifw.32 --outputdir=${{runner.workspace}}/Qt
+        echo "${{runner.workspace}}/Qt/Tools/QtInstallerFramework/3.2/bin" >> $GITHUB_PATH
 
     - name: Create Build Directory
       run: cmake -E make_directory ${{runner.workspace}}/EnergyPlus/build
 
     - name: Configure CMake
-      shell: bash
       working-directory: ${{runner.workspace}}/EnergyPlus/build
-      run: cmake -G "Visual Studio 16 2019" -A Win32 -DLINK_WITH_PYTHON=ON -DTEX_INTERACTION="batchmode" -DBUILD_FORTRAN=ON -DDOCUMENTATION_BUILD="BuildWithAll" -DMIKTEX_BINARY_PATH="C:/Program Files/MikTeX/miktex/bin/x64" -DQTIFWDIR="${{runner.workspace}}/Qt/Tools/QtInstallerFramework/3.2" -DBUILD_PACKAGE:BOOL=ON ..
+      shell: bash
+      run: |
+        cmake -G "Visual Studio 16 2019" -A ${{ matrix.vs-generator }} \
+              -DLINK_WITH_PYTHON=ON -DBUILD_FORTRAN=ON -DBUILD_PACKAGE:BOOL=ON \
+              -DDOCUMENTATION_BUILD="BuildWithAll" -DTEX_INTERACTION="batchmode" -DMIKTEX_BINARY_PATH="C:/Program Files/MikTeX/miktex/bin/x64" \
+              ../
 
     - name: Build Package
       working-directory: ${{runner.workspace}}/EnergyPlus/build
@@ -122,18 +79,18 @@ jobs:
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: ${{runner.workspace}}/EnergyPlus/build/EnergyPlus-*-Windows-i386.zip
+        file: ${{runner.workspace}}/EnergyPlus/build/EnergyPlus-*-Windows-${{ matrix.package-arch }}.zip
         tag: ${{ github.ref }}
         overwrite: true
         file_glob: true
-        asset_name: Win32_Zip
+        asset_name: ${{ matrix.asset_name }}_Zip
 
     - name: Upload IFW to release
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: ${{runner.workspace}}/EnergyPlus/build/EnergyPlus-*-Windows-i386.exe
+        file: ${{runner.workspace}}/EnergyPlus/build/EnergyPlus-*-Windows-${{ matrix.package-arch }}.exe
         tag: ${{ github.ref }}
         overwrite: true
         file_glob: true
-        asset_name: Win32_Installer
+        asset_name: ${{ matrix.asset_name }}_Installer
