Add mitkex to path, not sure if I need to escape or not

--- a/.github/workflows/windows_release.yml
+++ b/.github/workflows/windows_release.yml
@@ -47,7 +47,8 @@ jobs:
     - name: Install Chocolately Packages
       shell: bash
       run: |
-        choco install -y miktex
+        choco install --verbose -y miktex
+        echo "C:/Program Files/MikTeX/miktex/bin/x64/" >> $GITHUB_PATH
         # refreshenv?
 
     - name: Build Test Document (will install missing packages)
