Suppress an annoying recurring warning about not having checked for updates as a user in miktex

--- a/.github/workflows/windows_release.yml
+++ b/.github/workflows/windows_release.yml
@@ -56,6 +56,8 @@ jobs:
       working-directory: ./doc/test
       shell: bash
       run: |
+        # Avoid annoying warning: "xelatex: major issue: So far, you have not checked for updates as a MiKTeX user."
+        mpm --find-updates
         mpm --admin --set-repository="https://ctan.math.illinois.edu/" && xelatex dependencies.tex
         # xelatex dependencies.tex || mpm --admin --set-repository=https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages && xelatex dependencies.tex
 
