--- a/.github/workflows/windows_release.yml
+++ b/.github/workflows/windows_release.yml
@@ -47,8 +47,8 @@ jobs:
     - name: Install Chocolately Packages
       shell: bash
       run: |
-        choco install --verbose -y miktex --params '"/RepoPath:https://ctan.math.illinois.edu/"'
-        # choco install --verbose -y miktex || choco install --verbose -y miktex --params '"/https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages/"'
+        # Note: pending a PR of mine at https://github.com/teknowledgist/Chocolatey-packages/pull/40, the RepoPath won't work
+        choco install --verbose -y miktex || choco install --verbose -y miktex --params '"/RepoPath:https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages/"'
         echo "C:/Program Files/MikTeX/miktex/bin/x64/" >> $GITHUB_PATH
         # refreshenv?
 
@@ -58,7 +58,7 @@ jobs:
       run: |
         # Avoid annoying warning: "xelatex: major issue: So far, you have not checked for updates as a MiKTeX user."
         mpm --find-updates
-        mpm --admin --set-repository="https://ctan.math.illinois.edu/" && xelatex dependencies.tex
+        mpm --admin --set-repository="https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages/" && xelatex dependencies.tex
         # xelatex dependencies.tex || mpm --admin --set-repository=https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages && xelatex dependencies.tex
 
     - name: Create Build Directory
