--- a/.github/workflows/windows_release.yml
+++ b/.github/workflows/windows_release.yml
@@ -47,15 +47,19 @@ jobs:
     - name: Install Chocolately Packages
       shell: bash
       run: |
+        set -x
         # Note: pending a PR of mine at https://github.com/teknowledgist/Chocolatey-packages/pull/40, the RepoPath won't work
         choco install --verbose -y miktex || choco install --verbose -y miktex --params '"/RepoPath:https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages/"'
         echo "C:/Program Files/MikTeX/miktex/bin/x64/" >> $GITHUB_PATH
+        ls C:/Program Files/MikTeX/miktex/bin/x64 || true
         # refreshenv?
 
     - name: Build Test Document (will install missing packages)
       working-directory: ./doc/test
       shell: bash
       run: |
+        set -x
+        cat $GITHUB_PATH
         # Avoid annoying warning: "xelatex: major issue: So far, you have not checked for updates as a MiKTeX user."
         mpm --find-updates
         mpm --admin --set-repository="https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages/" && xelatex dependencies.tex
