--- a/.github/workflows/windows_release.yml
+++ b/.github/workflows/windows_release.yml
@@ -60,6 +60,7 @@ jobs:
       run: |
         set -x
         cat $GITHUB_PATH
+        echo $PATH
         mpm --admin --set-repository="https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages/" && xelatex dependencies.tex
         # Avoid annoying warning: "xelatex: major issue: So far, you have not checked for updates as a MiKTeX user."
         mpm --find-updates
@@ -83,6 +84,7 @@ jobs:
         cmake -G "Visual Studio 16 2019" -A ${{ matrix.vs-generator }} \
               -DLINK_WITH_PYTHON=ON -DBUILD_FORTRAN=ON -DBUILD_PACKAGE:BOOL=ON \
               -DDOCUMENTATION_BUILD="BuildWithAll" -DTEX_INTERACTION="batchmode" \
+              -DQTIFWDIR="$(pwd)/Qt/Tools/QtInstallerFramework/3.2"
               ../
 
     - name: Build Package
