--- a/.github/workflows/windows_release.yml
+++ b/.github/workflows/windows_release.yml
@@ -44,11 +44,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install aqtinstall
 
-    - name: Install Chocolately Packages
+    - name: Install Chocolatey Packages
       shell: bash
       run: |
         set -x
-        choco install --verbose -y miktex --version 20.10.0.20201030 --params '"/RepoPath:https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages/"' || cat /c/ProgramData/chocolatey/logs/chocolatey.log
+        choco install --verbose -y --no-progress miktex --version 20.10.0.20201030 --params '"/RepoPath:""$TEMP\chocolatey\MiKTeX-repository"" /Mirror:https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages/"' || cat /c/ProgramData/chocolatey/logs/chocolatey.log
         echo "C:/Program Files/MikTeX/miktex/bin/x64/" >> $GITHUB_PATH
         ls C:/Program Files/MikTeX/miktex/bin/x64 || true
 
