--- a/.github/workflows/windows_release.yml
+++ b/.github/workflows/windows_release.yml
@@ -48,7 +48,7 @@ jobs:
       shell: bash
       run: |
         set -x
-        choco install --verbose -y --no-progress miktex --version 20.10.0.20201030 --params '"/RepoPath:""C:\Users\runneradmin\AppData\Local\Temp\chocolatey\MiKTeX-repository"" /Mirror:https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages/"' || cat /c/ProgramData/chocolatey/logs/chocolatey.log
+        choco install -y --no-progress miktex --version 20.10.0.20201030 --params '"/RepoPath:https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages/ /Mirror:https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages/"' || cat /c/ProgramData/chocolatey/logs/chocolatey.log
         echo "C:/Program Files/MikTeX/miktex/bin/x64/" >> $GITHUB_PATH
         ls "C:/Program Files/MikTeX/miktex/bin/x64" || true
 
@@ -57,9 +57,10 @@ jobs:
       shell: bash
       run: |
         set -x
-        mpm --admin --set-repository="https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages/" && xelatex dependencies.tex
+        mpm --admin --set-repository="https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages/"
         # Avoid annoying warning: "xelatex: major issue: So far, you have not checked for updates as a MiKTeX user."
         mpm --find-updates
+        xelatex dependencies.tex
         # xelatex dependencies.tex || mpm --admin --set-repository=https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages && xelatex dependencies.tex
 
     - name: Create Build Directory
