--- a/.github/workflows/windows_release.yml
+++ b/.github/workflows/windows_release.yml
@@ -59,9 +59,9 @@ jobs:
         curl -L -O https://miktex.org/download/ctan/systems/win32/miktex/setup/windows-x64/miktexsetup-4.0-x64.zip
         unzip miktexsetup-4.0-x64.zip
         echo "Setting up the local package directory via download"
-        ./miktexsetup --verbose --local-package-repository=C:\ProgramData\MiKTeX-Repo --remote-package-repository="https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages/" --package-set=basic download
+        ./miktexsetup --verbose --local-package-repository=C:/ProgramData/MiKTeX-Repo --remote-package-repository="https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages/" --package-set=basic download
         echo "Installing from the local package directory previously set up"
-        ./miktexsetup --verbose --local-package-repository=C:\ProgramData\MiKTeX-Repo --package-set=basic --shared install
+        ./miktexsetup --verbose --local-package-repository=C:/ProgramData/MiKTeX-Repo --package-set=basic --shared install
         echo "Adding MiKTeX bin folder to PATH and to GITHUB_PATH"
         echo "C:/Program Files/MiKTeX/miktex/bin/x64/" >> $GITHUB_PATH
         export PATH="/c/Program Files/MiKTeX/miktex/bin/x64/:$PATH"
