--- a/.github/workflows/windows_release.yml
+++ b/.github/workflows/windows_release.yml
@@ -56,15 +56,28 @@ jobs:
       shell: bash
       run: |
         set -x
+        echo "Downloading MiKTeX CLI installer"
         curl -L -O https://miktex.org/download/ctan/systems/win32/miktex/setup/windows-x64/miktexsetup-4.0-x64.zip
         unzip miktexsetup-4.0-x64.zip
+
         echo "Setting up the local package directory via download"
-        ./miktexsetup --verbose --local-package-repository=C:/ProgramData/MiKTeX-Repo --remote-package-repository="https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages/" --package-set=basic download
+        ./miktexsetup --verbose \
+            --local-package-repository=C:/ProgramData/MiKTeX-Repo \
+            --remote-package-repository="https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages/" \
+            --package-set=basic \
+            download
+
         echo "Installing from the local package directory previously set up"
-        ./miktexsetup --verbose --local-package-repository=C:/ProgramData/MiKTeX-Repo --package-set=basic --shared install
+        ./miktexsetup --verbose \
+            --local-package-repository=C:/ProgramData/MiKTeX-Repo \
+            --package-set=basic \
+            --shared \
+            install
+
         echo "Adding MiKTeX bin folder to PATH and to GITHUB_PATH"
         echo "C:/Program Files/MiKTeX/miktex/bin/x64/" >> $GITHUB_PATH
         export PATH="/c/Program Files/MiKTeX/miktex/bin/x64/:$PATH"
+
         echo "Configuring MiKTeX to install missing packages on the fly"
         initexmf --admin --verbose --set-config-value='[MPM]AutoInstall=1'
 
@@ -78,14 +91,13 @@ jobs:
         # Avoid annoying warning: "xelatex: major issue: So far, you have not checked for updates as a MiKTeX user."
         mpm --find-updates
         xelatex dependencies.tex
-        # xelatex dependencies.tex || mpm --admin --set-repository=https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages && xelatex dependencies.tex
 
     - name: Create Build Directory
       run: cmake -E make_directory ./build/
 
     - name: Install IFW
-      shell: bash
       working-directory: ./build
+      shell: bash
       run: |
         aqt tool windows tools_ifw 3.2.2 qt.tools.ifw.32 --outputdir=./Qt
         echo "$(pwd)/Qt/Tools/QtInstallerFramework/3.2/bin" >> $GITHUB_PATH
@@ -94,12 +106,10 @@ jobs:
       working-directory: ./build
       shell: bash
       run: |
-        which binarycreator
-        echo $PATH
         cmake -G "Visual Studio 16 2019" -A ${{ matrix.vs-generator }} \
               -DLINK_WITH_PYTHON=ON -DBUILD_FORTRAN=ON -DBUILD_PACKAGE:BOOL=ON \
               -DDOCUMENTATION_BUILD="BuildWithAll" -DTEX_INTERACTION="batchmode" \
-              -DQTIFWDIR="$(pwd)/Qt/Tools/QtInstallerFramework/3.2"
+              -DQTIFWDIR="$(pwd)/Qt/Tools/QtInstallerFramework/3.2" \
               ../
 
     - name: Build Package
