--- a/.github/workflows/windows_release.yml
+++ b/.github/workflows/windows_release.yml
@@ -57,7 +57,8 @@ jobs:
       run: |
         set -x
         echo "Downloading MiKTeX CLI installer"
-        curl -L -O https://miktex.org/download/ctan/systems/win32/miktex/setup/windows-x64/miktexsetup-4.0-x64.zip
+        # We download from a specific miror already
+        curl -L -O https://ctan.math.illinois.edu/systems/win32/miktex/setup/windows-x64/miktexsetup-4.0-x64.zip
         unzip miktexsetup-4.0-x64.zip
 
         echo "Setting up the local package directory via download"
