adjust quoting for GITHUB_ENV. Seems like it appends a bunch of quotes

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -102,12 +102,12 @@ jobs:
           echo "/Library/TeX/texbin" >> $GITHUB_PATH
 
           echo "Setting FC (fortran compiler)"
-          echo "FC=/usr/local/bin/gfortran-9" >> $GITHUB_ENV
+          echo FC=/usr/local/bin/gfortran-9 >> $GITHUB_ENV
 
         elif [ "$RUNNER_OS" == "Windows" ]; then
 
           echo "Setting CMAKE_GENERATOR='-G \"Visual Studio 16 2019\" -A ${{ matrix.vs-generator }}'"
-          echo "CMAKE_GENERATOR='-G \"Visual Studio 16 2019\" -A ${{ matrix.vs-generator }}'" >> $GITHUB_ENV
+          echo CMAKE_GENERATOR='-G \"Visual Studio 16 2019\" -A ${{ matrix.vs-generator }}' >> $GITHUB_ENV
 
           echo "Downloading MiKTeX CLI installer"
           # We download from a specific miror already
