--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -142,6 +142,7 @@ jobs:
           mpm --admin --set-repository="https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages/"
           # Avoid annoying warning: "xelatex: major issue: So far, you have not checked for updates as a MiKTeX user."
           mpm --find-updates
+          mpm --admin --find-updates
         fi;
 
     #- name: Build Test Document (will install missing packages)
